cluster/apps/default/n8n/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: default
  labels:
    app: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: docker.n8n.io/n8nio/n8n:1.106.2
          ports:
            - containerPort: 5678
              name: http
          volumeMounts:
            - name: n8n-data
              mountPath: /home/node/.n8n
            - name: n8n-postgres-ca
              mountPath: /home/ssl/certs/postgresql
              readOnly: true
          resources:
            requests:
              memory: 256Mi
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data
        - name: n8n-postgres-ca
          secret:
            secretName: n8n-postgres-ca
            items:
              - key: ca.crt
                path: ca.crt
