cluster/apps/default/n8n/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: default
  labels:
    app: n8n
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5678
      protocol: TCP
      name: http
  selector:
    app: n8n
