cluster/apps/default/n8n/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: default
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "robot"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_DOMAIN}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflarewarp@kubernetescrd"
    external-dns/external: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - n8n.${SECRET_LAB_DOMAIN}
      secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
  rules:
    - host: n8n.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
